fixes image and text on mobile for our approach

--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -13,9 +13,11 @@
     flex-direction: column;
     img {
       width: 100%;
+      padding: 8px !important;
     }
-    .text {
+    .approach-text {
       width: 100%;
+      padding: 8px !important;
     }
   }
 }
